--- a/IRStructurizer/Project.toml
+++ b/IRStructurizer/Project.toml
@@ -4,7 +4,11 @@ authors = ["Tim Besard <tim.besard@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 
 [compat]
+AbstractTrees = "0.4"
 Graphs = "1.13.2"
+MLStyle = "0.4"
