--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ BFloat16s = "ab4f0b2a-ad5b-11e8-123f-65d77653426b"
 CompilerCaching = "9db33cc3-5358-4881-8759-fa4194144afd"
 CUDA_Compiler_jll = "d1e2174e-dfdc-576e-b43e-73b79eb1aca8"
 CUDA_Tile_jll = "2068806d-a867-5dbd-af0e-42c2eb5d895d"
+ExprTools = "e2ba6199-217a-4e67-a87a-7c52f15ade04"
 IRStructurizer = "93e32bba-5bb8-402b-805d-ffb066edee93"
 
 [weakdeps]
@@ -31,4 +32,5 @@ BFloat16s = "0.6"
 CompilerCaching = "0.1"
 CUDA_Compiler_jll = "0.4"
 CUDA_Tile_jll = "13.1"
+ExprTools = "0.1"
 IRStructurizer = "0.1"
