--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,9 @@ projects = ["test", "examples"]
 
 [deps]
 BFloat16s = "ab4f0b2a-ad5b-11e8-123f-65d77653426b"
-CompilerCaching = "9db33cc3-5358-4881-8759-fa4194144afd"
 CUDA_Compiler_jll = "d1e2174e-dfdc-576e-b43e-73b79eb1aca8"
 CUDA_Tile_jll = "2068806d-a867-5dbd-af0e-42c2eb5d895d"
-ExprTools = "e2ba6199-217a-4e67-a87a-7c52f15ade04"
+CompilerCaching = "9db33cc3-5358-4881-8759-fa4194144afd"
 IRStructurizer = "93e32bba-5bb8-402b-805d-ffb066edee93"
 
 [weakdeps]
@@ -19,18 +18,17 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DLFP8Types = "f4c16678-4a16-415b-82ef-ed337c5d6c7c"
 
 [sources]
-CompilerCaching = {url = "https://github.com/maleadt/CompilerCaching.jl", rev="main"}
-IRStructurizer = {url = "https://github.com/maleadt/IRStructurizer.jl", rev = "main"}
+CompilerCaching = {rev = "main", url = "https://github.com/maleadt/CompilerCaching.jl"}
+IRStructurizer = {rev = "main", url = "https://github.com/maleadt/IRStructurizer.jl"}
 
 [extensions]
 CUDAExt = "CUDA"
 DLFP8TypesExt = "DLFP8Types"
 
 [compat]
-julia = "1.11"
 BFloat16s = "0.6"
-CompilerCaching = "0.1"
 CUDA_Compiler_jll = "0.4"
 CUDA_Tile_jll = "13.1"
-ExprTools = "0.1"
+CompilerCaching = "0.1"
 IRStructurizer = "0.1"
+julia = "1.11"
